--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Software Engineer - BA Computer Science</p>
+      <p class="masthead-subheading font-weight-light mb-0">Software Engineer - B.S. Computer Science</p>
 
     </div>
   </header>
