Google webapp email

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form  action="https://formspree.io/xlegpago"  method="POST">
+          <form  action="https://script.google.com/macros/s/AKfycbziU1pFZvTvQVGtla8_5wHSRudrzwpu3xo0qwX1l9NtJv7QR08/exec"  method="POST" class="gform">
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
                 <label>Name</label>
